# StellarTrail

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  config.example.yaml  gradle.properties  gradlew  gradlew.bat  package-lock.json  package.json  settings.gradle.kts  tsconfig.base.json
.agent/: AGENTS.md  commands.yaml  context-index.yaml  manifest.yaml
.agent/agents/: code-reviewer.md  refactor-planner.md
.agent/checklists/: doc-sync.md  preflight.md  self-review.md
.agent/knowledge/: README.md  architecture.md  codebase_map.md  production_deployment.md
.agent/skills/: README.md
.agent/skills/git/: skill.md
.github/workflows/: android-ci.yml  android-release.yml  frontend-ci.yml  rust-ci.yml
apps/android/: README.md  build.gradle.kts  config.example.properties  proguard-rules.pro
apps/ios/: .gitignore  README.md  project.yml
apps/ios/StellarTrailTests/: APIClientTests.swift  AppShellTests.swift  CopyLintTests.swift  DomainDecodingTests.swift  IOSParityDataTests.swift
apps/ios/StellarTrailUITests/: Info.plist  ScreenshotFlowUITests.swift
apps/macos/: .gitignore  README.md  project.yml
apps/macos/StellarTrailMac/: StellarTrailMacApp.swift
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: manifest.webmanifest
apps/web/src/: App.test.tsx  App.tsx  GearAtlasPage.test.tsx  GearAtlasPage.tsx  KnotsPage.test.tsx  KnotsPage.tsx  api.test.ts  api.ts  client-config.ts  env.d.ts  formatters.test.ts  formatters.ts  gear-atlas-utils.ts  gear-options.ts  locale.ts  main.tsx  product-icon.test.ts  session.test.ts  session.ts  styles.css  styles.test.ts
apps/wechat-miniprogram/: README.md  package.json  project.config.json  tsconfig.json  tsconfig.test.json
apps/wechat-miniprogram/miniprogram/: app.json  app.ts  app.wxss  config.example.ts
apps/wechat-miniprogram/tests/: api.test.cjs  auth-guest-mode.test.cjs  auth-ui.test.cjs  card-style.test.cjs  client-version.test.cjs  gear-utils.test.cjs  trip-utils.test.cjs
assets/brand/: README.md
content/gear-templates/: backpacking-basic.yaml
content/mountains/: wugongshan.yaml
content/routes/: wugongshan-classic-2d1n.yaml
content/skills/knots/: adjustable-grip-hitch-knot.md  taut-line-hitch.md
crates/db/: Cargo.toml
crates/db/src/: config.rs  connection.rs  lib.rs
crates/db/src/repositories/: admin_role_repository.rs  api_usage_repository.rs  app_content_page_repository.rs  auth_repository.rs  client_version_repository.rs  disclaimer_acceptance_repository.rs  feedback_repository.rs  gear_atlas_repository.rs  gear_packing_repository.rs  gear_repository.rs  gear_template_repository.rs  knot_repository.rs  media_resource_repository.rs  mod.rs  outdoor_profile_repository.rs  roadmap_repository.rs  skill_favorite_repository.rs  trail_repository.rs  trip_repository.rs  upload_image_repository.rs
crates/db/tests/: gear_atlas_repository.rs  gear_template_repository.rs  knot_repository.rs
crates/domain/: Cargo.toml
crates/domain/src/: admin.rs  deletion.rs  feedback.rs  gear.rs  gear_atlas.rs  gear_packing.rs  gear_template.rs  lib.rs  locale.rs  mountain.rs  outdoor_profile.rs  pagination.rs  roadmap.rs  route.rs  skill.rs  trail.rs  trip.rs  upload.rs  user.rs  validation.rs
crates/domain/tests/: skill_locale.rs  upload_validation.rs
crates/importer/: Cargo.toml
crates/importer/src/: gear_atlas_cn.rs  knot_alias_backfill.rs  lib.rs  main.rs
crates/importer/tests/: cli.rs  gear_atlas_cn.rs  knot_alias_backfill.rs  knots3d_metadata.rs  parser_fixtures.rs
crates/migration/: Cargo.toml
crates/migration/src/: add_client_version_commit_hash.rs  add_outdoor_profile_birth_date.rs  add_outdoor_profile_trip_safety_fields.rs  add_public_content_localizations.rs  add_user_phone_auth.rs  clear_knots3d_section_heading_steps.rs  compat_folded_migrations.rs  create_admin_roles.rs  lib.rs  (+57 more)
docs/: api.md  architecture.md  content-schema.md  deployment.md  mvp.md  trail-map-one-time-ddl.md
gradle/: libs.versions.toml
infra/: Dockerfile.api  docker-compose.yml  integration-test.sh  smoke-test.sh
infra/production/: domains.example.yaml
infra/test/: docker-compose.shared-data.yml  docker-compose.yml  smoke-test.sh
scripts/: audit-knot-risk-copy.mjs  capture-ios-screenshots.sh  capture-macos-screenshots.sh  dev-api.sh  generate-api-client.sh  import-content.sh  upload-knots3d-media.mjs
scripts/ci/: detect-android-release-tags.sh  prepare-android-release-assets.sh  write-android-release-notes.sh
services/api/: Cargo.toml
services/api/src/: api_usage.rs  cache.rs  config.rs  email.rs  error.rs  extractors.rs  lib.rs  main.rs  object_store.rs  state.rs
services/api/src/dto/: admin.rs  api_usage.rs  auth.rs  client_version.rs  content_page.rs  disclaimer.rs  feedback.rs  gear.rs  gear_atlas.rs  gear_packing.rs  knot_media.rs  mod.rs  profile.rs  roadmap.rs  skill_favorites.rs  trail.rs  trip.rs  upload.rs
services/api/src/routes/: admin_api_usage.rs  admin_knots.rs  admin_roles.rs  auth.rs  client_versions.rs  content.rs  feedback.rs  gear_atlas.rs  gear_packing.rs  gears.rs  health.rs  localization.rs  map.rs  meta.rs  mod.rs  profile.rs  roadmap.rs  skills.rs  trails.rs  trips.rs  uploads.rs
services/api/src/services/: admin_service.rs  auth_service.rs  client_identity_service.rs  client_version_service.rs  content_page_service.rs  feedback_service.rs  gear_service.rs  knot_media_upload_service.rs  map_style_cache.rs  mod.rs  profile_service.rs  public_rate_limit_service.rs  public_response_cache.rs  rate_limit_service.rs  request_signature_service.rs  roadmap_service.rs  sms.rs  trail_service.rs  upload_service.rs  wechat.rs
services/api/tests/: admin_roles_routes.rs  api_usage_routes.rs  auth_routes.rs  client_versions_routes.rs  content_routes.rs  gear_routes.rs  profile_routes.rs  rate_limit_routes.rs  roadmap_routes.rs  skills_knots_admin_upload_routes.rs  skills_knots_routes.rs  system_routes.rs  trail_routes.rs  trip_routes.rs  upload_feedback_routes.rs
(+333 files in other folders)
