[workspace]
members = [
  "services/api",
  "crates/domain",
  "crates/db",
  "crates/importer",
  "crates/migration",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rustella/StellarTrail"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
axum = { version = "0.7", features = ["multipart"] }
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1"
dotenvy = "0.15"
hex = "0.4"
hmac = "0.12"
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
http-body-util = "0.1"
rand = "0.8"
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }
rustls = "0.23"
rustls-pki-types = "1"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sha1 = "0.10"
tempfile = "3"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
url = { version = "2.5.8", features = ["serde"] }
webpki-roots = "1"
