[package]
name = "stellartrail-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
stellartrail-domain = { path = "../domain" }
thiserror.workspace = true
