[package]
name = "stellartrail-importer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
stellartrail-domain = { path = "../domain" }
stellartrail-db = { path = "../db" }
stellartrail-migration = { path = "../migration" }
tokio.workspace = true
