[package]
name = "stellartrail-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
stellartrail-db = { path = "../../crates/db" }
stellartrail-domain = { path = "../../crates/domain" }
tokio.workspace = true
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
