[package]
name = "stellartrail-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
axum.workspace = true
base64.workspace = true
csv.workspace = true
dotenvy.workspace = true
hex.workspace = true
http-body-util.workspace = true
rand.workspace = true
redis.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
stellartrail-db = { path = "../../crates/db" }
stellartrail-domain = { path = "../../crates/domain" }
stellartrail-importer = { path = "../../crates/importer" }
stellartrail-migration = { path = "../../crates/migration" }
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
